fix: Forge launch libraries sync, UI performance, dynamic RAM and custom icons